--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,18 @@
   overflow-x: scroll;
   overflow-y: hidden;
   max-width: 1660px;
-  height: 110px;
   white-space: nowrap;
   margin: 10px auto;
 }
 
 .keyboard {
   width: auto;
-  padding: 0;
-  margin: 0;
+  padding: 0 20px;
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  gap: 5px;
+  grid-template-columns: repeat(12, 1fr);
 }
 
 .key {
@@ -18,13 +21,13 @@
   font: 16px "Open Sans", "Lucida Grande", "Arial", sans-serif;
   border: 1px solid black;
   border-radius: 5px;
-  width: 20px;
-  height: 80px;
+  min-width: 40px;
+  height: 60px;
   text-align: center;
   box-shadow: 2px 2px darkgray;
-  display: inline-block;
+  display: block;
   position: relative;
-  margin-right: 3px;
+  margin-right: 5px;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
@@ -35,7 +38,6 @@
   position: absolute;
   bottom: 0;
   text-align: center;
-  width: 100%;
   pointer-events: none;
 }
 
@@ -52,11 +54,6 @@
 .active {
   background-color: black;
   color: white;
-}
-
-.octave {
-  display: inline-block;
-  padding-right: 6px;
 }
 
 .settingsBar {
